# claude-plugpack

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LAUNCH_GUIDE.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json  scraped_plugins.json
.claude/: plugins.json  settings.json
.github/workflows/: ci.yml  deploy-site.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260111_1500_001_initial_schema.py  20260111_2133_10c491293165_initial_schema.py
documentation/: infrastructure.md
documentation/prd/: 01-original-platform-prd.md  02-mvp-prd.md
generator/: __init__.py  generate.py  quality_report.py  utils.py
generator/templates/: all_plugins.html  base.html  categories_index.html  category.html  index.html  plugin.html
skills/plugin_analyzer/: SKILL.md  __init__.py  analyzer.py  plugin.json
src/plugpack/: __init__.py  cli.py  config.py  database.py  main.py
src/plugpack/api/: __init__.py  packs.py  plugins.py  search.py
src/plugpack/models/: __init__.py
src/plugpack/scraper/: __init__.py  run.py  scraper.py  sources.py
src/plugpack/scripts/: seed.py
src/plugpack/templates/: base.html
src/plugpack/templates/pages/: home.html  pack_detail.html  packs.html  plugin_detail.html  plugins.html  search.html
tests/: __init__.py  conftest.py  test_api_plugins.py  test_api_search.py  test_health.py  test_scraper.py
tickets/: 001-infrastructure-setup.md
